<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Program Recording</string>
    <string name="duration">Duration</string>
    <string name="start_time">Start Time</string>
    <string name="title">Title</string>
    <string name="anderson_cooper_360">Anderson Cooper 360</string>
    <string name="date">Mon 8/30 8:00p</string>
    <string name="record">Record</string>
    <string name="watch">Watch</string>
    <string name="cancel_recording">Cancel</string>
    <string name="channels">Channels</string>
    <string name="scheduled_recordings">Scheduled Recordings</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_12_45">12:45</string>
    <string name="nba">NBA</string>
    <string name="later_today">Later Today</string>
    <string name="details">Details</string>
    <string name="open_app">Open App</string>
    <string name="cancel_download">Cancel Download</string>
</resources>