<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="4dp"
    android:backgroundTint="#454242"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginStart="10dp"
        android:text="@string/_11_00"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:text="@string/nba"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/details_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:layout_marginEnd="10dp"
        android:text="@string/details"
        android:textColor="@color/white" />

</androidx.cardview.widget.CardView>
